@startuml

title US 006 - an Administrator, I want to add a new sensor and associate it to a geographical area, so that one can get measurements of that type in that area.
skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor Snow
skinparam FontName quicksand
skinparam titleFontSize 10
skinparam roundcorner 10


skinparam class {
 BorderColor indianred
 BackgroundColor indianred
 BackgroundColor Snow
  roundcorner 10
  ArrowFontName Verdana
  ArrowColor indianred
  ArrowFontColor darkslategrey
   FontSize 12
}



class SensorSettingsWebController
class GeographicAreaDTO
class GeographicAreaRepository
class ResponseEntity
class GeographicAreaMapper
class GeographicAreaCrudeRepo
class AreaSensorDTO

Postman -- SensorSettingsWebController : >
SensorSettingsWebController -- ResponseEntity : >
SensorSettingsWebController -- GeographicAreaRepository : >
GeographicAreaRepository -- GeographicAreaDTO : >
GeographicAreaRepository -- GeographicAreaMapper : >
GeographicAreaRepository -- AreaSensorDTO : >
GeographicAreaRepository -- GeographicAreaCrudeRepo : >



class SensorSettingsWebController {
createAreaSensor(@RequestBody AreaSensorDTO, @PathVariable long)
}

class GeographicAreaRepository {
getDTOById(long)
addSensorDTO(GeographicAreaDTO, AreaSensorDTO)
updateAreaDTO(GeographicAreaDTO)
}

class GeographicAreaCrudeRepo {
findById(long)
save(GeographicArea)
}

class GeographicAreaMapper{
objectToDTO(GeographicArea)
dtoToObject(GeographicAreaDTO)
}

class GeographicAreaDTO{
addSensor(AreaSensorDTO)
}

@enduml